@@ -28,6 +28,7 @@
 struct grub_auth_user
 {
   struct grub_auth_user *next;
+  struct grub_auth_user **prev;
   char *name;
   grub_auth_callback_t callback;
   void *arg;
@@ -73,7 +74,7 @@ grub_auth_unregister_authentication (const char *user)
   if (!cur->authenticated)
     {
       grub_free (cur->name);
-      grub_list_remove (GRUB_AS_LIST_P (&users), GRUB_AS_LIST (cur));
+      grub_list_remove (GRUB_AS_LIST (cur));
       grub_free (cur);
     }
   else
@@ -121,7 +122,7 @@ grub_auth_deauthenticate (const char *user)
   if (!cur->callback)
     {
       grub_free (cur->name);
-      grub_list_remove (GRUB_AS_LIST_P (&users), GRUB_AS_LIST (cur));
+      grub_list_remove (GRUB_AS_LIST (cur));
       grub_free (cur);
     }
   else
